Running tests for a long time results in some tests running very slowly (throttling) https://bugs.webkit.org/show_bug.cgi?id=147718

Reviewed by Alexey Proskuryakov.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetPreferencesToConsistentValues):
Ensure throttling settings are disabled for tests for all ports, as
COCOA ports default to having these setting enabled. Note, there is
still other timer throttling not covered by these setting.

Canonical link: https://commits.webkit.org/165853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188102 268f45cc-cd09-0410-ab3c-d52691b4dbfc